@@ -1005,46 +1005,60 @@
 		      <signal name="clicked" handler="on_person_list1_activate" last_modification_time="Thu, 05 Sep 2002 01:03:54 GMT"/>
 
 		      <child>
-			<widget class="GtkHBox" id="hbox134">
+			<widget class="GtkAlignment" id="alignment13">
 			  <property name="visible">True</property>
-			  <property name="homogeneous">False</property>
-			  <property name="spacing">2</property>
+			  <property name="xalign">0</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xscale">0</property>
+			  <property name="yscale">0</property>
+			  <property name="top_padding">0</property>
+			  <property name="bottom_padding">0</property>
+			  <property name="left_padding">0</property>
+			  <property name="right_padding">0</property>
 
 			  <child>
-			    <widget class="GtkImage" id="image2654">
+			    <widget class="GtkHBox" id="hbox134">
 			      <property name="visible">True</property>
-			      <property name="pixbuf">people48.png</property>
-			      <property name="xalign">0.5</property>
-			      <property name="yalign">0.5</property>
-			      <property name="xpad">0</property>
-			      <property name="ypad">0</property>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
+			      <property name="homogeneous">False</property>
+			      <property name="spacing">2</property>
 
-			  <child>
-			    <widget class="GtkLabel" id="label525">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;b&gt;People&lt;/b&gt;</property>
-			      <property name="use_underline">True</property>
-			      <property name="use_markup">True</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
-			      <property name="wrap">False</property>
-			      <property name="selectable">False</property>
-			      <property name="xalign">0.5</property>
-			      <property name="yalign">0.5</property>
-			      <property name="xpad">0</property>
-			      <property name="ypad">0</property>
+			      <child>
+				<widget class="GtkImage" id="image2654">
+				  <property name="visible">True</property>
+				  <property name="pixbuf">people48.png</property>
+				  <property name="xalign">0</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">False</property>
+				  <property name="fill">False</property>
+				</packing>
+			      </child>
+
+			      <child>
+				<widget class="GtkLabel" id="label525">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">&lt;b&gt;People&lt;/b&gt;</property>
+				  <property name="use_underline">True</property>
+				  <property name="use_markup">True</property>
+				  <property name="justify">GTK_JUSTIFY_LEFT</property>
+				  <property name="wrap">False</property>
+				  <property name="selectable">False</property>
+				  <property name="xalign">0.5</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">False</property>
+				  <property name="fill">False</property>
+				</packing>
+			      </child>
 			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
 			  </child>
 			</widget>
 		      </child>
@@ -1067,7 +1081,7 @@
 		      <child>
 			<widget class="GtkAlignment" id="alignment6">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1141,7 +1155,7 @@
 		      <child>
 			<widget class="GtkAlignment" id="alignment7">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1215,7 +1229,7 @@
 		      <child>
 			<widget class="GtkAlignment" id="alignment8">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1279,7 +1293,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkButton" id="button198">
+		    <widget class="GtkButton" id="side_repos">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="relief">GTK_RELIEF_NONE</property>
@@ -1289,7 +1303,7 @@
 		      <child>
 			<widget class="GtkAlignment" id="alignment9">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1364,7 +1378,7 @@ tories&lt;/b&gt;</property>
 		      <child>
 			<widget class="GtkAlignment" id="alignment10">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1438,7 +1452,7 @@ tories&lt;/b&gt;</property>
 		      <child>
 			<widget class="GtkAlignment" id="alignment11">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
@@ -1502,7 +1516,7 @@ tories&lt;/b&gt;</property>
 		  </child>
 
 		  <child>
-		    <widget class="GtkButton" id="button197">
+		    <widget class="GtkButton" id="side_events">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="relief">GTK_RELIEF_NONE</property>
@@ -1512,7 +1526,7 @@ tories&lt;/b&gt;</property>
 		      <child>
 			<widget class="GtkAlignment" id="alignment12">
 			  <property name="visible">True</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xscale">0</property>
 			  <property name="yscale">0</property>
